Added part status to Assign Items page

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-# Python compiled files
-*.py[co]
-__pycache__/
-
-# Pycharm IDE stuff
-.idea/
-
-# Django private stuff
-*/settings.py
-db.sqlite3
-
-# Virtualenv files
-env/
-py3env/
 venv/
-
-# Ignore my personal notes
-notes/
+db*
+mysite/
+*.pyc
